--- a/pastacss/style.css
+++ b/pastacss/style.css
@@ -3,8 +3,7 @@
     font-size: 20px;;
 }
 body{
-    background-color: rgb(202, 122, 240);
-}
+    background-color: rgb(202, 122, 240);}
 main{
     background-color: aliceblue;
     width: 100%;
@@ -20,5 +19,4 @@ main{
     padding: 20px;
     padding: 1px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
-    transition: all 0.3s ease;
-    }
+    transition: all 0.3s ease;}
