--- a/pastacss/style.css
+++ b/pastacss/style.css
@@ -19,4 +19,6 @@ main{
     padding: 20px;
     padding: 1px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
-    transition: all 0.3s ease;}
+    transition: all 0.3s ease;
+    
+}
